--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <h1>Exceptional</h1>
     <h2>Realty Group</h2>
 
+
+    <video controls>
+      <source src=""
+    </video>
     <!-- your code here! See README.md for deliverables -->
 
   </body>
